; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwmon/extr_npcm750-pwm-fan.c_npcm7xx_pwm_cz_set_cur_state.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwmon/extr_npcm750-pwm-fan.c_npcm7xx_pwm_cz_set_cur_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thermal_cooling_device = type { %struct.npcm7xx_cooling_device* }
%struct.npcm7xx_cooling_device = type { i64, i64, i32*, i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.thermal_cooling_device*, i64)* @npcm7xx_pwm_cz_set_cur_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @npcm7xx_pwm_cz_set_cur_state(%struct.thermal_cooling_device* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.thermal_cooling_device*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.npcm7xx_cooling_device*, align 8
  %7 = alloca i32, align 4
  store %struct.thermal_cooling_device* %0, %struct.thermal_cooling_device** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load %struct.thermal_cooling_device*, %struct.thermal_cooling_device** %4, align 8
  %9 = getelementptr inbounds %struct.thermal_cooling_device, %struct.thermal_cooling_device* %8, i32 0, i32 0
  %10 = load %struct.npcm7xx_cooling_device*, %struct.npcm7xx_cooling_device** %9, align 8
  store %struct.npcm7xx_cooling_device* %10, %struct.npcm7xx_cooling_device** %6, align 8
  %11 = load i64, i64* %5, align 8
  %12 = load %struct.npcm7xx_cooling_device*, %struct.npcm7xx_cooling_device** %6, align 8
  %13 = getelementptr inbounds %struct.npcm7xx_cooling_device, %struct.npcm7xx_cooling_device* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ugt i64 %11, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %2
  %17 = load i32, i32* @EINVAL, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %3, align 4
  br label %39

19:                                               ; preds = %2
  %20 = load i64, i64* %5, align 8
  %21 = load %struct.npcm7xx_cooling_device*, %struct.npcm7xx_cooling_device** %6, align 8
  %22 = getelementptr inbounds %struct.npcm7xx_cooling_device, %struct.npcm7xx_cooling_device* %21, i32 0, i32 1
  store i64 %20, i64* %22, align 8
  %23 = load %struct.npcm7xx_cooling_device*, %struct.npcm7xx_cooling_device** %6, align 8
  %24 = getelementptr inbounds %struct.npcm7xx_cooling_device, %struct.npcm7xx_cooling_device* %23, i32 0, i32 4
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.npcm7xx_cooling_device*, %struct.npcm7xx_cooling_device** %6, align 8
  %27 = getelementptr inbounds %struct.npcm7xx_cooling_device, %struct.npcm7xx_cooling_device* %26, i32 0, i32 3
  %28 = load i32, i32* %27, align 8
  %29 = load %struct.npcm7xx_cooling_device*, %struct.npcm7xx_cooling_device** %6, align 8
  %30 = getelementptr inbounds %struct.npcm7xx_cooling_device, %struct.npcm7xx_cooling_device* %29, i32 0, i32 2
  %31 = load i32*, i32** %30, align 8
  %32 = load %struct.npcm7xx_cooling_device*, %struct.npcm7xx_cooling_device** %6, align 8
  %33 = getelementptr inbounds %struct.npcm7xx_cooling_device, %struct.npcm7xx_cooling_device* %32, i32 0, i32 1
  %34 = load i64, i64* %33, align 8
  %35 = getelementptr inbounds i32, i32* %31, i64 %34
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @npcm7xx_pwm_config_set(i32 %25, i32 %28, i32 %36)
  store i32 %37, i32* %7, align 4
  %38 = load i32, i32* %7, align 4
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %19, %16
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @npcm7xx_pwm_config_set(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
